--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,9 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Yo What Up Coursera</title>
+	<title>Module 2 Menu</title>
+	<link rel="stylesheet" href="css.css">
 </head>
+
 <body>
-<h1>Yo What Up Coursera.</h1>
+
+<h1>Module 2 Menu</h1>
+
+<div class="row">
+
+<section class="col-lg-4 col-md-6">
+	<div class="container">
+	<h2 id="Chicken">Chicken</h2>
+	<p>Here is the chicken. It is tasty. We don't even season it because it's so fresh. No sides included. Just one full chicken on a plate.</p>
+	</div>
+</section>
+
+<section class="col-lg-4 col-md-6">
+	<div class="container">
+	<h2 id="Beef">Beef</h2>
+	<p>Where's the beef? Here it is. It comes from a cow. Cows go moo. What's not to like?</p>
+    </div>
+</section>
+
+<section class="col-lg-4 col-md-12">
+	<div class="container">
+	<h2 id="Fish">Fish</h2>
+	<p>Very similar to the Chicken and the Beef except this time it's from underwater. Pretty wild I know.</p>
+    </div>
+</section>
+
+</div>
+
 </body>
+
 </html>
