--- a/module3_solution/index.html
+++ b/module3_solution/index.html
@@ -4,12 +4,59 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>David Chu's China Bistro</title>
+    <title>Module 3 Assignment</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
   </head>
 <body>
+ <header>
+  <nav id="header-nav" class="navbar navbar-default">
+    <div class="container">
+      <div class="navbar-header" class="pull-left">
+        <div class="navbar-brand">
+          <a href="index.html"><h1>Food, LLC!</h1></a>
+        </div>
+      </div>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav">
+        <span class ="icon-bar"></span>
+        <span class ="icon-bar"></span>
+        <span class ="icon-bar"></span>
+      </button>
+    </div>
+
+    <div id="collapsable-nav" class="collapse navbar-collapse">
+      <ul id="nav-list" class="nav navbar-nav navbar-right">
+        <li>
+          <a class="hidden-md hidden-sm hidden-lg">
+            <br>Chicken</a>
+        </li>
+        <li>
+          <a class="hidden-md hidden-sm hidden-lg">
+            <br>Beef</a>
+        </li>
+        <li>
+          <a class="hidden-md hidden-sm hidden-lg">
+            <br>Fish</a>
+        </li>
+      </ul>
+    </div>  
+  </nav>
+ </header>
+
+ <div id="main-content" class="container">
+  <div class="jumbotron">
+     <h1> Our Menu </h1>
+    <section class="container-fluid" id="tall-section">
+     <h2>Dummy Text</h2>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem sed risus ultricies tristique nulla aliquet. Enim facilisis gravida neque convallis a. Dui id ornare arcu odio ut sem nulla pharetra. Mauris ultrices eros in cursus. Sit amet porttitor eget dolor morbi. Elementum facilisis leo vel fringilla est ullamcorper. Ullamcorper malesuada proin libero nunc consequat. A pellentesque sit amet porttitor eget dolor morbi non arcu. Et netus et malesuada fames ac turpis. Purus in massa tempor nec feugiat nisl pretium fusce. Diam maecenas sed enim ut. Et pharetra pharetra massa massa ultricies mi quis hendrerit. Nec sagittis aliquam malesuada bibendum. Diam maecenas ultricies mi eget mauris pharetra et. Enim neque volutpat ac tincidunt vitae semper quis lectus nulla.</p>
+
+      <p> Tellus cras adipiscing enim eu turpis egestas pretium aenean. Nunc scelerisque viverra mauris in aliquam sem fringilla ut. Lectus proin nibh nisl condimentum id venenatis a condimentum. Neque sodales ut etiam sit amet nisl purus in mollis. Odio facilisis mauris sit amet massa vitae. At risus viverra adipiscing at. Cum sociis natoque penatibus et magnis. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor magna. Adipiscing at in tellus integer feugiat. Laoreet non curabitur gravida arcu ac tortor dignissim convallis aenean. Orci ac auctor augue mauris augue neque gravida in. Vel risus commodo viverra maecenas accumsan lacus vel. Viverra aliquet eget sit amet tellus cras adipiscing enim eu. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. </p>
+    </section>
+  </div>
+</div>
 
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
